fabrik/internal/engine/testdata/jobs_worker_serve_no_ctx.txt
When a background runtime (//fabrik:jobs:worker) hosts the shutdown envelope, a
custom //fabrik:http:server must accept a context.Context so it can drain on the
signal-bound root; a context-less server would block coordinated shutdown.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/jobs v0.0.0

replace github.com/gofabrik/fabrik/jobs => JOBSDIR
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- shared/shared.go --
package shared

import (
	"context"

	"github.com/gofabrik/fabrik/jobs"
)

//fabrik:provider
func NewJobStore() (jobs.Store, error) { return jobs.NewMemoryStore(), nil }

type Welcome struct{ UserID int64 }

//fabrik:job
func SendWelcome(ctx context.Context, m Welcome) error { return nil }

//fabrik:jobs:worker
func Worker() jobs.RuntimeConfig {
	return jobs.RuntimeConfig{Worker: jobs.WorkerConfig{Concurrency: 2}, RunScheduler: true}
}

//fabrik:http:server
func Serve() error { return nil }
-- want/diags --
error: shared/shared.go:22:1: //fabrik:http:server Serve must accept a context.Context
  help: this app hosts a background runtime whose graceful shutdown is coordinated on a signal-bound context; add the parameter: func Serve(ctx context.Context, h http.Handler) error
